refactor: don't remove bossbar when skip is ran and there are songs left to play